modules/gdscript/tests/scripts/analyzer/errors/for_key_value_not_dictionary.gd
func test():
    var a := [1, 2, 3]
    for k, v in a:
        prints(k, v)
